--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 
 body, html {
     padding: 0;
@@ -102,8 +102,10 @@ h2, h1 {
     width: 100%;
 }
 
-.book-card__description > h2:nth-child(1) {
+.book-card__description > a {
     margin-bottom: 1rem;
+    color: black;
+    text-decoration: none;
 }
 
 .book-card__description > h2:nth-child(2) {
@@ -173,4 +175,57 @@ h2, h1 {
 .review > span {
     margin-top: 1rem;
     display: block;
+}
+
+.cart__layout {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+}
+
+.cart__list {
+    min-width: 500px;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+}
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.cart__total {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cart__total > button {
+    background: #000;
+    border-radius: 8px;
+    color: #FFF;
+    font-weight: 500;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.cart__books {
+    width: 100%;
+}
+
+.cart-item {
+    margin: 0.5rem 0;
+    font-size: 1.2rem;
+}
+
+.cart-item > span:nth-child(1) {
+    font-weight: 500;
+}
+
+.cart-item > span:nth-child(2) {
+    font-weight: 700;
 }
